--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <!-- google fonts end -->
 </head>
     <body>
-
-        
+        <!-- preloader start -->
+<div class="preloader-bg"></div>
+<div id="preloader">
+    <div id="preloader-status">
+        <div class="preloader-position loader">
+            <span></span>
+        </div>
+    </div>
+</div>
+<!-- preloader end -->
         <!-- borders start -->
         <div class="border-top"></div>
         <!-- borders end -->
