--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                                 <!-- section subtitle start -->
                                                 <div class="section-title section-title-home fadeIn-element">
                                                     <h2 class="section-title-line section-title-line-home">
-                                                        <span>Embark on a Culinary Journey</span>
+                                                        <span>Culinary Journey</span>
                                                     </h2>
                                                 </div>
                                                 <!-- section subtitle end -->
