--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
             <!-- container end -->
         
 
-            <div>
+            <!--<div>
                 <div class="containerImage">
                     <div class="card">
                         <div class="bike">
@@ -1144,15 +1144,15 @@
                             <img src="img/dish.jpg" alt="image">
                         </div>
                         <div class="info">
-                            <h1 class="title"><span style="color: #ea3900; font-size:28px;">Signature Dish!</span></h1>
+                            <h1 class="title"><span style="color: #ea3900; font-size:28px;">Signature Dish!</span></h1>-->
                             <!--<div class="purchase">
                                 <button>Order Now</button>
                             </div>-->
-                        </div>
+                        <!--</div>
                     </div>
                 </div>
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-            </div>
+            </div>-->
 
 
 
@@ -2840,7 +2840,7 @@
                                         <!-- divider start -->
                                         <div class="divider-m"></div>
                                         <!-- divider end -->
-                                        <span class="contact-info-text">ex Inc. Touchdown Dr 1176</span>
+                                        <span class="contact-info-text">1224 St Clair Ave W, Toronto, ON M6E 1B4</span>
                                     </div>
                                     <!-- divider start -->
                                     <div class="divider-m visible-mobile-devices"></div>
@@ -3054,8 +3054,7 @@
                     <div id="google-maps-wrapper">
                         <!-- google maps start -->
                         <div class="google-maps">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1900.0887375048374!2d-79.3287784570488!3d43.74074086227632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sin!4v1703856344453!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.5745410137056!2d-79.4449243!3d43.6778176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b347391b1a04f%3A0xe1d47ffaf16ead7e!2s1224%20St%20Clair%20Ave%20W%2C%20Toronto%2C%20ON%20M6E%201B4%2C%20Canada!5e0!3m2!1sen!2sus!4v1706730380526!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        </div>
                         <!-- google maps end -->
                     </div>
                     <!-- google maps wrapper end -->
@@ -3093,9 +3092,9 @@
                         <!-- social icons start -->
                         <div class="social-icons">
                             <ul>
-                                <li>
+                                <!--<li>
                                     <a class="ion-social-twitter" href="#"><span>Twitter</span></a>
-                                </li>
+                                </li>-->
                                 <li>
                                     <a class="ion-social-facebook" href="#"><span>Facebook</span></a>
                                 </li>
