--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                                 <!-- divider end -->
                                                 <!-- button start -->
                                                 <div class="more-wraper-center more-wraper-center-home fadeIn-element">
-                                                    <a data-lity="" href="#">
+                                                    <a data-lity="" href="">
                                                         <div class="more-button-bg-center more-button-circle"></div>
                                                         <div class="more-button-txt-center">
                                                             <span>Coming Soon!</span>
@@ -184,7 +184,7 @@
                                                 <!-- divider end -->
                                                 <!-- button start -->
                                                 <div class="more-wraper-center more-wraper-center-home fadeIn-element">
-                                                    <a data-lity="" href="#">
+                                                    <a data-lity="" href="">
                                                         <div class="more-button-bg-center more-button-circle"></div>
                                                         <div class="more-button-txt-center">
                                                             <span>Coming Soon!</span>
@@ -226,7 +226,7 @@
                                                 <!-- divider end -->
                                                 <!-- button start -->
                                                 <div class="more-wraper-center more-wraper-center-home fadeIn-element">
-                                                    <a data-lity="" href="#">
+                                                    <a data-lity="" href="">
                                                         <div class="more-button-bg-center more-button-circle"></div>
                                                         <div class="more-button-txt-center">
                                                             <span>Coming Soon!</span>
@@ -268,7 +268,7 @@
                                                 <!-- divider end -->
                                                 <!-- button start -->
                                                 <div class="more-wraper-center more-wraper-center-home fadeIn-element">
-                                                    <a data-lity="" href="#">
+                                                    <a data-lity="" href="">
                                                         <div class="more-button-bg-center more-button-circle"></div>
                                                         <div class="more-button-txt-center">
                                                             <span>Coming Soon!</span>
@@ -1364,7 +1364,7 @@
                             <!-- divider end -->
                             <!-- button start -->
                             <div class="more-wraper-center">
-                                <a data-lity="" href="#">
+                                <a data-lity="" href="">
                                     <div class="more-button-bg-center more-button-circle"></div>
                                     <div class="more-button-txt-center">
                                         <span>Coming Soon!</span>
