--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Aamara - Indian Culinary Excellence
+        Aamara - Flavours Redefined
     </title>
     <link rel="icon" type="image/png" href="img/logo-favicon.png">
     <meta content="" name="description">
