--- a/index.html
+++ b/index.html
@@ -1782,7 +1782,7 @@
                     <div class="parallax-overlay"></div>
                     <!-- parallax overlay end -->
                     <!-- parallax content start -->
-                    <div class="parallax-content">
+                    <div class="parallax-content style="height: 400px;">
                         <!-- line start -->
                         <div class="the-line the-line-light"></div>
                         <!-- line end -->
@@ -2666,7 +2666,6 @@
                         <div class="divider-l"></div>
                         <!-- divider end -->
                         <!-- line start -->
-                        <div class="the-line the-line-light"></div>
                         <!-- line end -->
                         <!-- divider start -->
                         <div class="divider-l"></div>
@@ -2708,7 +2707,7 @@
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
                                     <!-- divider end -->
-                                    <span class="contact-info-text"><a class="link-effect link-effect-light" href="mailto:contact@domainname.com">contact@domainname.com</a></span>
+                                    <span class="contact-info-text"><a class="link-effect link-effect-light" href="mailto:info@aamara.ca" style="font-style: italic;text-transform: lowercase;">info@aamara.ca</a></span>
                                 </div>
                             </div>
                             <!-- col end -->
@@ -2844,7 +2843,7 @@
     <!-- footer start -->
     <div id="footer" class="section-all bg-light">
         <!-- divider start -->
-        <div class="divider-xl"></div>
+        <div class="divider-xl style="height: 30px;></div>
         <!-- divider end -->
         <!-- container start -->
         <div class="container-fluid">
@@ -2863,7 +2862,7 @@
                     <div class="divider-m"></div>
                     <!-- divider end -->
                     <!-- section title start -->
-                    <h2 class="hero-heading hero-heading-dark">
+                    <h2 class="hero-heading hero-heading-dark style="height: 30px;>
                         The <span>Location</span>
                     </h2>
                     <!-- section title end -->
