--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                                     <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle">                                        </div>
                                     <div class="more-button-txt-center more-button-txt-center-close">
                                         <button  style="font-size: large;">
-                                            <span style="color: black;"></span>Book<br> now</span>
+                                            <span style="color: black;"></span>Coming<br>Soon</span>
                                         </button>
                                     </div>
                                 </div>
@@ -646,7 +646,8 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Crispy parcels of joy filled with seasoned potatoes, reminiscent of street-side nostalgia and served with a tangy tamarind chutney.</p>
+                                <p class="item-description">Traditional preparation of crunchy money bag
+                                    samosa with potato filling.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -670,7 +671,8 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Miniature marvels of spice-packed idlis, served on a traditional banana leaf, igniting your taste buds with every bite..</p>
+                                <p class="item-description">Pinnacle of spice powdered tiny idlis,
+                                    served on banana leaf.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -694,7 +696,8 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Crispy summer squash adorned with delicate coconut saffron microgreens, a symphony of flavors and textures that transport you to tropical bliss.</p>
+                                <p class="item-description">Crispy summer squash decorated
+                                    with coconut saffron microgreens.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -718,7 +721,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lamb mince spheres presented in a unique, artistic manner, accompanied by a tantalizing chutney, offering a fusion of tradition and innovation.</p>
+                                <p class="item-description">Uniquely presented lamb mince spheroid served with chutney.</p>
                                 <!-- section txt end -->
                             </div>
                         </div>
@@ -746,7 +749,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Tandoor-marinated lamb chops, adorned with luxurious 24-karat gold leaves, promising a regal dining experience fit for royalty.</p>
+                                <p class="item-description">Tandoor marinated lamb chop served with 24 karat gold leaves.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -770,7 +773,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">A refreshing twist on the classic Indian street food, featuring creamy avocado whipped yogurt atop a medley of vibrant chaat flavors.</p>
+                                <p class="item-description">Indian street chaat curated with avocado and yogurt whip disc.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -1043,19 +1046,7 @@
                             <div class="hover-effect the-team"></div>
                         </div>
                         <!-- section item end -->
-                        <!-- section item start -->
-                        <div class="post-box hover-effect-img">
-                            <div class="hover-icons">
-                                <a class="ion-plus popup-photo-gallery-open" href="img/inside/5.jpg" title="IMG Description"></a>
-                            </div>
-                            <!-- circle wrapper start -->
-                            <div class="circle-wrapper-full">
-                                <div class="carousel-item-all carousel-item-inside-05"></div>
-                            </div>
-                            <!-- circle wrapper end -->
-                            <div class="hover-effect the-team"></div>
-                        </div>
-                        <!-- section item end -->
+                    
                     </div>
                 </div>
             </div>
