--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">ROLD GOLD LAMB CHOP</h3>
+                                    <h3 class="item-name">PURPLE MALAI KOFTA</h3>
                                     <span class="item-divider"></span>
                                     <span class="item-price">$28</span>
                                     <!-- section title end -->
@@ -749,7 +749,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Tandoor marinated lamb chop served with 24 karat gold leaves.</p>
+                                <p class="item-description">Nutty all blue malai sphere float on rich white onion gravy.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -764,7 +764,7 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">CHICKEN AVOCADO CHAAT</h3>
+                                    <h3 class="item-name">BAINGAN BHARTA</h3>
                                     <span class="item-divider"></span>
                                     <span class="item-price">$18</span>
                                     <!-- section title end -->
@@ -773,7 +773,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Indian street chaat curated with avocado and yogurt whip disc.</p>
+                                <p class="item-description">Chargrilled eggplant peeled and cooked with herbs, served with thepla bread.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -788,16 +788,16 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Insalata di riso</h3>
+                                    <h3 class="item-name">PANEER PASANDA</h3>
                                     <span class="item-divider"></span>
-                                    <span class="item-price">$18</span>
+                                    <span class="item-price">$28</span>
                                     <!-- section title end -->
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">Stuffed cottage cheese layers float on mild creamy curry.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -812,7 +812,7 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Insalata Russa</h3>
+                                    <h3 class="item-name">PACHAKARI MOILEE KORMA</h3>
                                     <span class="item-divider"></span>
                                     <span class="item-price">$19</span>
                                     <!-- section title end -->
@@ -821,7 +821,7 @@
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">Famous Kerala region coconut curry paired with string hoppers.</p>
                                 <!-- section txt end -->
                             </div>
                         </div>
