--- a/index.html
+++ b/index.html
@@ -840,16 +840,16 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Negroni</h3>
+                                    <h3 class="item-name">HYDERABADI CHICKEN BIRYANI</h3>
                                     <span class="item-divider"></span>
-                                    <span class="item-price">$6</span>
+                                    <span class="item-price">$33</span>
                                     <!-- section title end -->
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">Aged basmati rice layered with 18 spiced marinated chicken cooked in unique way, served with raita, salad and pickle.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -864,16 +864,16 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Campari</h3>
+                                    <h3 class="item-name">HARIYALI SHRIMP BIRYANI</h3>
                                     <span class="item-divider"></span>
-                                    <span class="item-price">$7</span>
+                                    <span class="item-price">$34</span>
                                     <!-- section title end -->
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">Mint flavoured rice preparation loaded with shrimps and caramelized onion.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -888,16 +888,46 @@
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Americano</h3>
+                                    <h3 class="item-name">KASHMIRI PULAO</h3>
                                     <span class="item-divider"></span>
-                                    <span class="item-price">$8</span>
+                                    <span class="item-price">$14</span>
                                     <!-- section title end -->
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">ged basmati rice dish packed with toasted nuts, fruits, warming spices and saffron with a mild and faintly sweet in taste.</p>
+                                <!-- section txt end -->
+                            </div>
+                            
+                        </div>
+                        <!-- items group 3 end -->
+                        <!-- items group 4 start -->
+                        <div class="menu" id="menu-4">
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/1.jpg" title="IMG Description">
+                                            <img src="img/menu/6.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">SPECIAL DOSA</h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$21</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Plain thin crisp dosa serving with your choice:
+                                    Desi Ghee / Butter / Gingelly oil.</p>
                                 <!-- section txt end -->
                             </div>
                             <div class="item">
@@ -905,27 +935,132 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/12.jpg" title="IMG Description">
-                                            <img src="img/menu/12.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/2.jpg" title="IMG Description">
+                                            <img src="img/menu/6.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
                                     <!-- items img end -->
                                     <!-- section title start -->
-                                    <h3 class="item-name">Bellini</h3>
+                                    <h3 class="item-name">AAMARA SPECIAL MASALA DOSA</h3>
                                     <span class="item-divider"></span>
-                                    <span class="item-price">$9</span>
+                                    <span class="item-price">$25</span>
                                     <!-- section title end -->
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m"></div>
                                 <!-- divider end -->
                                 <!-- section txt start -->
-                                <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et arcu nulla. Curabitur blandit feugiat elit id tempus.</p>
+                                <p class="item-description">Thin crisp dosa stuffed with options of masala:
+                                    Paneer / mushroom / tofu .</p>
+                                <!-- section txt end -->
+                            </div>
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/3.jpg" title="IMG Description">
+                                            <img src="img/menu/6.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">CHETTINADU CHICKEN DOSA</h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$30</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Thin crisp dosa stuffed with succulent chicken
+                                    flavoured with 18 spices.</p>
                                 <!-- section txt end -->
                             </div>
                         </div>
-                        <!-- items group 3 end -->
+                        <!-- items group 4 end -->
+                        <!-- items group 5 start -->
+                        <div class="menu" id="menu-5">
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/9.jpg" title="IMG Description">
+                                            <img src="img/menu/9.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">BULLET UTTAPAM</h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$22</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Pancake grilled with onion chilli cheeses and
+                                    spread of gunpowder.</p>
+                                <!-- section txt end -->
+                            </div>
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/10.jpg" title="IMG Description">
+                                            <img src="img/menu/10.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">SPRING VEGGIE UTTAPAM</h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$25</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Uttapam topped with julienne of carrot beans beet.</p>
+                                <!-- section txt end -->
+                            </div>
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/11.jpg" title="IMG Description">
+                                            <img src="img/menu/11.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">AAMARA SPECIAL VENISON UTTAPAM</h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$33</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Tender venison cooked with South Indian
+                                    spices topped with eggs.</p>
+                                <!-- section txt end -->
+                            </div>
+                            
+                        </div>
+                        <!-- items group 5 end -->
                     </div>
                     <!-- col end -->
                 </div>
