--- a/index.html
+++ b/index.html
@@ -3040,7 +3040,7 @@
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
                                     <!-- divider end -->
-                                    <span class="contact-info-text large">+123 456 7890</span>
+                                    <span class="contact-info-text large">+1(416)6510010</span>
                                 </div>
                                 <!-- divider start -->
                                 <div class="divider-m visible-mobile-devices"></div>
