watch video button moved

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
                                             <!-- button start -->
                                             <div class="more-wraper-center more-wraper-center-home fadeIn-element">
                                                 <a data-lity="" href="mothersday.mp4">
-                                                    <div class="more-button-bg-center more-button-circle"></div>
+                                                    <div class="more-button-bg-center more-button-circle visible-xs" style="
+                                                    margin-top: 360px" ></div>
+                                                    <div class="more-button-bg-center more-button-circle hidden-xs" ></div>
                                                     <div class="more-button-txt-center">
                                                         <span>Watch Video</span>
                                                     </div>
